--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,12 @@
             <param-value>true</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
+        <multipart-config>
+            <location>/Users/nocturnum/Dev/upload/tmp</location>
+            <max-file-size>20971520</max-file-size> <!--1MB * 20 -->
+            <max-request-size>41943040</max-request-size><!-- 40MB -->
+            <file-size-threshold>20971520</file-size-threshold> <!-- 20MB -->
+        </multipart-config>
     </servlet>
     <servlet-mapping>
         <servlet-name>appServlet</servlet-name>
